clusters/homelab/apps/search/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: search
  labels:
    gateway.infra.services/allow-routes: "true"
