clusters/homelab/apps/search/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: search
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "search.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: searxng
          port: 8080
